# wxCairoSVG

./: .gitignore  .project  CMakeLists.txt  README
example/: CMakeLists.txt  FindCairo.cmake  example.cpp
include/wx/svg/: cairosvg.h
include/wx/svg/cairo/: context.h  node.h
include/wx/svg/cairo/paintservers/: color.h  gradientstop.h  lineargradient.h  paintserver.h  radialgradient.h  solidcolor.h
include/wx/svg/cairo/shapes/: circle.h  ellipse.h  path.h  polygon.h  polyline.h  rect.h  util.h
src/: cairosvg.cpp  context.cpp  node.cpp
src/paintservers/: color.cpp  gradientstop.cpp  lineargradient.cpp  paintserver.cpp  radialgradient.cpp
src/shapes/: circle.cpp  ellipse.cpp  path.cpp  polygon.cpp  polyline.cpp  rect.cpp  util.cpp
